# personal-knowledge-base

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: example.config.yml
docs/adr/: 001-qdrant-over-chroma.md  002-chunking-config-for-nomic-embed-text.md
scripts/: run_batch.py
src/personal_knowledge_base/batch/: __init__.py  processor.py
src/personal_knowledge_base/fetchers/: __init__.py  base.py  code_repo.py  image.py  pdf.py  web.py  youtube.py
src/personal_knowledge_base/interface/: __init__.py  query.py  suggestions.py  tutorial.py  whatsapp.py
src/personal_knowledge_base/kb/: __init__.py  registry.py
src/personal_knowledge_base/processing/: __init__.py  chunker.py  classifier.py  clustering.py  staleness.py
src/personal_knowledge_base/queue/: __init__.py  db.py  models.py  operations.py
src/personal_knowledge_base/storage/: vector_store.py
src/processing/: __init__.py  chunker.py  embedder.py
tests/: test_imports.py  test_queue_db.py  test_queue_models.py  test_queue_operations.py  test_repo_structure.py
tests/integration/: test_full_pipeline.py
tests/test_batch/: test_processor.py
tests/test_fetchers/: test_code_repo.py  test_image.py  test_pdf.py  test_web.py  test_youtube.py
tests/test_interface/: __init__.py  test_query.py  test_suggestions.py  test_tutorial.py  test_whatsapp.py
tests/test_kb/: test_registry.py
tests/test_processing/: test_chunker.py  test_classifier.py  test_clustering.py  test_embedder.py  test_staleness.py
tests/test_storage/: test_vector_store.py
